# Yandex_school

./: README.md
Livecode_2/: README.md  main.cpp
Project_OP_3/: README.md  main_1.cpp  tab_values.tab
Project_OP_5/: CMakeLists.txt  all_other_functions.cpp  config.h  important_functions.cpp  main.cpp  parser.cpp  utils.h  work_with_file.cpp
Project_OP_6/: CMakeLists.txt  README.md  all_important_functions.cpp  all_other_functions.cpp  caching_one.txt  main.cpp  parser.cpp  struct.h  utils.h
Project_OP_7/: README.md
Project_OP_7/lib/: unrolled_list.h
Project_OP_7/tests/: CMakeLists.txt  allocator_ut.cpp  my_test_at.cpp  my_test_delete.cpp  my_test_insert.cpp  my_test_pop_pop.cpp  my_test_push_push.cpp  simple_ut.cpp
Project_OP_9/: README.md
Project_OP_9/lib/: scheduler.h
Project_OP_9/tests/: CMakeLists.txt  test.cpp
